Fixed spacing in the layout.

--- a/src/components/overview/styles.css
+++ b/src/components/overview/styles.css
@@ -1,7 +1,7 @@
 .overview {
   position: relative;
   border-style: solid;
-  padding-top: 5%;
+  padding-top: 7%;
 }
 
 /*
@@ -22,6 +22,8 @@
   left: 10%;
   height: inherit;
   width: inherit;
+  min-height: 70%;
+  min-width: 50%;
 }
 
 /* Main image in expanded view */
@@ -55,14 +57,14 @@
 
 .overview-left-button {
   position: absolute;
-  top: 66%;
-  left: 15%;
+  top: 70%;
+  left: 15.5%;
   z-index: 1;
 }
 
 .overview-right-button {
   position: absolute;
-  top: 66%;
+  top: 70%;
   left: 52.5%;
   z-index: 1;
 }
@@ -76,7 +78,7 @@
  .overview-overview {
   grid-area: overview;
   position: relative;
-  margin-top: 1.5%;
+  margin-top: 2.5%;
   display: grid;
   left: 62.5%;
   width: 30%;
@@ -89,6 +91,7 @@
     'selectStyle'
     'AddToCart'
     'butttons';
+  grid-auto-rows: 7% 7% 12% 12% 35% 20% 7%;
 }
 
 .overview-reviews {
@@ -114,6 +117,33 @@
   font-size: 2em;
 }
 
+.overview-price-container {
+  position: relative;
+  grid-area: price;
+  text-wrap: nowrap;
+}
+
+.overview-price-true {
+  color: red;
+  text-decoration: line-through;
+  font-size: 1.25em;
+}
+
+.overview-price-false {
+  font-size: 1.25em;
+}
+
+.overview-sale-price {
+  font-size: 1.25em;
+}
+
+.overview-selected-style {
+  grid-area: selectedStyle;
+  margin-top: 6%;
+  margin-bottom: 6%;
+  font-size: 1.25em;
+}
+
 .overview-styles-view {
   position: relative;
   z-index: 1;
@@ -124,7 +154,11 @@
   grid-template: repeat(2, 1fr) / repeat(4, 1fr);
   grid-template-columns: 20% 20% 20% 20%;
   grid-template-rows: 50% 50%;
-  padding-bottom: 10%;
+  padding-top: 7%;
+  padding-bottom: 14%;
+  min-height: 10%;
+  min-width: 50%;
+  max-width: 90%;
 }
 
 .overview-style-thumbnail {
@@ -132,25 +166,6 @@
   border-radius: 100%;
   height: 100%;
   width: 100%;
-}
-
-.overview-price-container {
-  grid-area: price;
-}
-
-.overview-selected-style {
-  grid-area: selectedStyle;
-}
-
-.overview-price-true {
-  color: red;
-  text-decoration: line-through;
-}
-
-.overview-price-onSale-true {
-}
-
-.overview-sale-price {
 }
 
 #overview-cart-form {
@@ -199,7 +214,6 @@
  .overview-details {
   position: relative;
   grid-area: details;
-  padding-top: 15%;
   display: grid;
   grid-template-areas:
     '. slogan      feature'
